Add Ausbilder Übersicht (#540)
* Add Ausbilder Übersicht

* Fix test

* Add Tests

* Add Docs

* Fix Style

* Fix conflict

* Fix conflict

* Update doc/docs/features/Praktikumsplaetze.md

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Fix formatting

* Fix imports

* Add check for empty mail

* Omptimize Imports

* Fix Typo

* Update praktikumsplaner-backend/src/main/java/de/muenchen/oss/praktikumsplaner/service/PraktikumsstellenService.java

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Update praktikumsplaner-backend/src/main/java/de/muenchen/oss/praktikumsplaner/service/PraktikumsstellenService.java

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Fix all the linting errors

* Upgrade to jdk21

* Upgrade to jdk21

* Upgrade to jdk21

* Fix coderabbit

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>